--- a/config/database.yml
+++ b/config/database.yml
@@ -82,4 +82,4 @@ production:
   <<: *default
   database: marios_specialty_production
   username: marios_specialty
-  password: <%= ENV['MARIOS_SPECIALTY_DATABASE_PASSWORD'] %>
+  password: ENV['MARIOS_SPECIALTY_DATABASE_PASSWORD']
